go-app/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-webserver-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: go-webserver
  template:
    metadata:
      labels:
        app: go-webserver
    spec:
      containers:
      - name: go-webserver
        image: localhost:5001/go-webserver:v0.0.1
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
