go-app/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-webserver-service
spec:
  selector:
    app: go-webserver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
